# rules_nodejs

./: .bazelignore  .bazelrc  .bazelversion  .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD  BUILD.bazel  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  MODULE.bazel  README.md  WORKSPACE  bazel-integration-testing.patch  commitlint.config.js  common.bazelrc  declaration_provider.bzl  defs.bzl  index.bzl  index.for_docs.bzl  npm_deps.bzl  on-version.js  package-lock.json  package.bzl  package.json  pnpm-lock.yaml  providers.bzl  renovate.json  repositories.bzl  rules_codeowners_pr27.patch  rules_sass.issue127.patch  rules_sass.pr126.patch  rules_typescript.patch  rules_typescript_pr_494.patch  rules_typescript_pr_496.patch  (+6 more)
docs/: .gitattributes  .gitignore  BUILD.bazel  Built-ins.html  Built-ins.md  Concatjs.html  Concatjs.md  Core.md  Cypress.html  Cypress.md  Jasmine.html  Jasmine.md  Karma.html  Karma.md  Labs.html  Labs.md  Less.md  Protractor.html  Protractor.md  Providers.html  Providers.md  README.md  Rollup.html  Rollup.md  Stylus.md  Terser.html  Terser.md  Toolchains.md  TypeScript.html  TypeScript.md  _config.yml  _providers.md  builtins.md  bundle.js  changing-rules.html  changing-rules.md  debugging.html  debugging.md  dependencies.html  dependencies.md  (+16 more)
docs-site/: BUILD.bazel  angular.json  docs.bzl  tsconfig.json
docs-site/src/: BUILD.bazel  index.html  main.ts  polyfills.ts  prerender.ts
docs-site/tools/: BUILD.bazel  defaults.bzl  ng_prerender.bzl
docs/_includes/: drawer.html  footer-content.html  footer.html  head.html  header.html  sidenav.html
docs/_layouts/: default.html  home.html  search.html
docs/assets/: main.css
docs/common/: check_bazel_version.html
docs/css/: BUILD.bazel  _sidebar.scss  docs.css  home.css  main.css
docs/history-server/: history_server.html
docs/http-server/: http_server.html
docs/jasmine_node_test/: jasmine_node_test.html
docs/node/: node.html  node_repositories.html
docs/npm_install/: npm_install.html
docs/npm_package/: npm_package.html
docs/rollup/: rollup_bundle.html
e2e/: BUILD.bazel  index.bzl  link-packages.sh  test.bzl  test.sh
e2e/angular_architect/: WORKSPACE
e2e/bazel_bin/: BUILD.bazel  WORKSPACE  package-lock.json  package.json  test.sh
e2e/bazel_managed_deps/: BUILD.bazel  WORKSPACE  deps.spec.js  package.json
e2e/bazel_run_chdir/: .bazelrc  WORKSPACE  test.sh
e2e/concatjs_devserver/: BUILD.bazel  WORKSPACE  app.ts  app_e2e-spec.ts  package.json  tsconfig.json
e2e/concatjs_devserver_directory_artifacts/: BUILD.bazel  WORKSPACE  app.ts  app_e2e-spec.ts  dummy_test.sh  package.json  protractor.on-prepare.js  tsconfig.json
e2e/conflicting_toolchains/: .gitignore  BUILD.bazel  MODULE.bazel
e2e/core/: BUILD.bazel  WORKSPACE  defs.bzl  nodejs_binary.bzl  nodejs_library.bzl  nodejs_package.bzl  nodejs_test.bzl  npm_import.bzl  package-lock.json  package.json  pkg_npm.bzl  require_acorn.js  test.js
e2e/coverage/: BUILD.bazel  WORKSPACE  package.json  tsconfig.json
e2e/define_var/: BUILD.bazel  WORKSPACE  define.spec.js  package.json
e2e/esm_no_linker/: BUILD  WORKSPACE  main.mjs  package.json
e2e/fine_grained_symlinks/: BUILD.bazel  WORKSPACE  package.json
e2e/headers/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
e2e/jasmine/: BUILD.bazel  WORKSPACE  coverage.spec.js  coverage_source.js  jasmine_shared_env_bootstrap.js  jasmine_shared_env_test.spec.js  package.json  test.spec.js
e2e/karma/: .bazelrc  BUILD.bazel  WORKSPACE  amd-modules.spec.js  decrement.js  decrement.spec.js  init-test.js  package.json  requirejs-config.js  test-initialized.spec.js
e2e/karma_stack_trace/: BUILD.bazel  WORKSPACE  dummy_test.sh  package.json  test_sourcemap.sh
e2e/karma_typescript/: BUILD.bazel  WORKSPACE  defaults.bzl  foobar.spec.ts  hello_world.spec.js  package.json  user_files.spec.js
e2e/less/: BUILD.bazel  WORKSPACE  golden.css  package.json  test.js
e2e/linker_disabled_regression/: .bazelignore  BUILD.bazel  README.md  WORKSPACE  main.cjs  package.json  test.sh
e2e/node_loader_no_preserve_symlinks/: .bazelrc  BUILD.bazel  WORKSPACE  package.json
e2e/node_loader_preserve_symlinks/: BUILD.bazel  WORKSPACE
e2e/nodejs_host/: BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bazel  index.spec.js  package.json  version_test.sh
e2e/nodejs_image/: BUILD.bazel  WORKSPACE  binary_version.js  main.js  nodejs_image.yaml  package.json
e2e/nodejs_repository/: BUILD.bazel  WORKSPACE
e2e/rollup/: BUILD.bazel  WORKSPACE  golden.js_  input.js  msg.js  package.json
e2e/smoke/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  WORKSPACE.bzlmod  defs.bzl  deps.bzl
e2e/stylus/: BUILD.bazel  WORKSPACE  golden.css  package.json  test.js
e2e/symlinked_node_modules_npm/: BUILD  WORKSPACE  main.js  package-lock.json  package.json
e2e/symlinked_node_modules_yarn/: BUILD  WORKSPACE  package.json
e2e/terser/: BUILD.bazel  WORKSPACE  input.js  package.json  test.js
e2e/ts_auto_deps/: BUILD.bazel  WORKSPACE  dummy_test.sh  package.json
e2e/ts_devserver/: BUILD.bazel  WORKSPACE  app.ts  app_e2e-spec.ts  app_e2e_test.ts  package.json  protractor.conf.js
e2e/ts_library/: BUILD.bazel  WORKSPACE  package.json  tsconfig.json
e2e/tsconfig_extends/: .bazelrc  BUILD.bazel  WORKSPACE  package.json  uses_promise.ts
e2e/typescript/: BUILD.bazel  WORKSPACE  lib.ts  main.spec.ts  package.json  tsconfig.json
e2e/typescript_2.7/: WORKSPACE  main.spec.ts  package.json
e2e/typescript_2.8/: WORKSPACE  main.spec.ts  main.ts  package.json
e2e/typescript_2.9/: BUILD.bazel  WORKSPACE  (+2 more)
examples/: BUILD.bazel  bar.ts  foo.ts  index.bzl  test.bzl  test_examples.sh
nodejs/: BUILD.bazel  defs.bzl  extensions.bzl  index.for_docs.bzl  node_toolchain_alias.bzl  providers.bzl  repositories.bzl  sandbox-patches.js  semantics.bzl  toolchain.bzl  ts_repositories.bzl  yarn_repositories.bzl
toolchains/: BUILD.bazel  index.for_docs.bzl
ts/: BUILD.bazel  index.for_docs.bzl  repositories.bzl  ts_config.bzl  ts_project.bzl
(+1996 files in other folders)
