"bzlmod declaration for bazelbuild/rules_nodejs"

module(
    name = "rules_nodejs",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "platforms", version = "0.0.5")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")

# Note, this gets the default version of Node.js from
# https://github.com/bazelbuild/rules_nodejs/blob/main/nodejs/repositories.bzl#L11
node.toolchain(name = "nodejs")
use_repo(node, "nodejs_toolchains")

register_toolchains("@nodejs_toolchains//:all")
