# Copyright 2017 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(":test.bzl", "e2e_integration_test")

e2e_integration_test(
    name = "e2e_fine_grained_symlinks",
    # TODO: figure out why this fails on Windows since setting
    # symlink_node_modules to False in the test WORKSPACE
    tags = ["no-bazelci-windows"],
)

e2e_integration_test(
    name = "e2e_node_loader_preserve_symlinks",
    # TODO: figure out why this fails on Windows since setting
    # symlink_node_modules to False in the test WORKSPACE
    tags = ["no-bazelci-windows"],
)

e2e_integration_test(
    name = "e2e_nodejs_image",
    bazel_commands = [
        "info",
        "test ...",
        "run --platforms=@rules_nodejs//nodejs:linux_amd64 //:nodejs_image",
    ],
    # Only run on buildkite linux as other CI platforms have no docker available
    tags = [
        "no-bazelci-mac",
        "no-bazelci-windows",
        "no-circleci",
    ],
)

e2e_integration_test(
    name = "e2e_nodejs_host",
)

e2e_integration_test(
    name = "e2e_packages",
    # TODO(alex): figure out why this is broken by turning on linker
    tags = ["no-bazelci-windows"],
)

e2e_integration_test(
    name = "e2e_symlinked_node_modules_npm",
    # TODO: figure out why this fails on Windows since setting
    # symlink_node_modules to False in the test WORKSPACE
    tags = ["no-bazelci-windows"],
)

e2e_integration_test(
    name = "e2e_symlinked_node_modules_yarn",
    # TODO: figure out why this fails on Windows since setting
    # symlink_node_modules to False in the test WORKSPACE
    tags = ["no-bazelci-windows"],
)

e2e_integration_test(
    name = "e2e_bazel_run_chdir",
    bazel_commands = [
        "run //subfolder:chdir-test",
    ],
    # TODO: figure out why this fails on Windows
    tags = ["no-bazelci-windows"],
)

e2e_integration_test(
    name = "e2e_linker_disabled_regression",
    bazel_commands = [
        "build //...",
        "run //subdir:binary",
    ],
    # TODO: figure out why this fails on Windows
    tags = ["no-bazelci-windows"],
)
